--- a/changelog.txt
+++ b/changelog.txt
@@ -1,358 +1,31 @@
 USAGE NOTES:
 - see Help in Settings for Command Keys
 - "Import addons.ini" will overwrite addon folders on next update timer
-- use pip theme with 8 channels per page to match original tv guide icon layout
 - click to load in addon browse dialog
 - right click to add channels to categories
 - reload all folders in settings
 - use Spoyser's repo for Super Favourites
 
-version 0.0.108
-- Import Playlist from anywhere
-
-version 0.0.107
-- Listing in TV Mode
-
-version 0.0.106
-- Import Playlist (to addon script.tvguide.dvr)
-
-version 0.0.105
-- show Listing/Now/Next/Search in other views
-
-version 0.0.104
-- leave osd open on channel change if direction button pressed
-
-version 0.0.103
-- fix
-
-version 0.0.102
-- fix
-
-version 0.0.101
-- don't fail if stop pressed early
-
-version 0.0.100
-- stream failed notification
-
-version 0.0.99
-- keep playing on Stream Setup exit
-- no osd on channel change
-
-version 0.0.98
-- Help in Settings
-
-version 0.0.97
-- highlight correct playing program and channel
-- Playback Timeout setting in Appearance
-- Up Next is disabled until playback is solid
-
-version 0.0.96
-- missing date
-
-version 0.0.95
-- autoplay/reminders views links to main menu
-
-version 0.0.94
-- db possible fix if addon won't open
-- Show Reminders (5)
-- Show Autoplays (6)
-
-version 0.0.93
-- Autoplay
-
-version 0.0.92
-- date info in views
-
-version 0.0.91
-- Search Programs (4)
-
-version 0.0.90
-- libreelec remote keys for Listings/Now/Next (1,2,3)
-
-version 0.0.89
-- sly textures without the sunglasses
-
-version 0.0.88
-- Listings (1), Now (2), Next (3)
-
-version 0.0.87
-- Now (menu,m)/ Next (last page, end) views
-
-version 0.0.86
-- fix
-
-version 0.0.85
-- highlight now playing channel and program
-- fixes and tweaks
-
-version 0.0.84
-- Listings view (info,i)
-
-version 0.0.83
-- today/tomorrow date in epg
-- fixes and tweaks
-
-version 0.0.82
-- fix
-
-version 0.0.81
-- Quick EPG
-
-version 0.0.80
-- error handling
-
-version 0.0.79
-- fix for streams that don't play
-
-version 0.0.78
-- select (enter) to close Up Next popup
-- tweaks and fixes
-
-version 0.0.77
-- Dark skin is back
-- Up Next popup (setting for seconds)
-
-version 0.0.76
-- fit footer
-- keep epg in sync
-
-version 0.0.75
-- last channel info in Default and pip skins
-
-version 0.0.74
-- last played channel in sly skin
-  last channel (0), show last channel info in tv mode (right), hide (left)
-
-version 0.0.73
-- return to epg on stop
-
-version 0.0.72
-- info to return from epg
-- sly tweaks
-
-version 0.0.71
-- go home on exception instead of freezing
-
-version 0.0.70
-- progress bars
-- db exception recovery
-- stay in tv mode on channel change (sometimes goes back to epg?!)
-
-version 0.0.69
-- page up wraparound fix
-
-version 0.0.68
-- up wraparound fix
-
-version 0.0.67
-- skin tweaks
-
-version 0.0.66
-- attempt at android fix (didn't work)
-
-version 0.0.65
-- skin tweaks
-
-version 0.0.64
-- skin tweaks
-
-version 0.0.63
-- fixes
-- Dark out until fixed
-
-version 0.0.62
-- skin tweaks
-
-version 0.0.61
-- skin tweaks
-
-version 0.0.60
-- addon folders update timer
-
-version 0.0.59
-- fix
-
-version 0.0.58
-- sly skin (from im85288)
-
-version 0.0.57
-- Dark skin (from iainmacleod)
-
-version 0.0.56
-- logo fix
-
-version 0.0.55
-- logo fix (delete icons.ini or do a database reset)
-
-version 0.0.54
-- smb fix
-
-version 0.0.53
-- no addons fix
-
-version 0.0.52
-- cosmetic fixes
-
-version 0.0.51
-- setting to download action folder icons
-- persistent category selection
-- fullscreen stream setup window
-
-version 0.0.50
-- channel icons from xmltv or addon folders
-
-version 0.0.49
-- strm/m3u8 sub-streams
-
-version 0.0.48
-- osd fix
-
-version 0.0.47
-- stop on exit setting
-- license change
-
-version 0.0.46
-- clearer pip skin layout
-- seperate button for stream setup (beware!)
-
-version 0.0.45
-- rpi fix (hopefully)
-- last page scroll fix
-- new pip skin
-- less flashing
-
-version 0.0.44
-- WARNING cyan skin is back to Default skin (change your settings!)
-- supports audio addons too
-- make context menu clearer
-
-version 0.0.43
-- osd context menu key fix
-
-version 0.0.42
-- fix for context menu losing category
-
-version 0.0.41
-- ignore case for exact channel match
-
-version 0.0.40
-- channel matching setting
-
-version 0.0.39
-- sort by categories.ini setting
-
-version 0.0.38
-- better channels.ini export
-
-version 0.0.37
-- fix
-
-version 0.0.36
-- fix
-
-version 0.0.35
-- categories.ini import setting
-
-version 0.0.34
-- fix
-
-version 0.0.33
-- sort channels in categories setting
-
-version 0.0.32
-- add channels to category is multiselect
-- removed addon in video section, only in programs now
-
-version 0.0.31
-- categories (right click to add channels)
-
-version 0.0.30
-- channel logo
-
-version 0.0.28
-- broader channel search
-- (some channels will find lots eg W)
-
-version 0.0.27
-- fix
-
-version 0.0.26
-- date and channel are back
-- channels word number match
-
-version 0.0.25
-- tweaks
-
-version 0.0.24
-- cyan theme with original 8 channel sizing
-
-version 0.0.23
-- cyan theme
-
-version 0.0.22
-- fix for large xmltv files
-- more space for program info
-
-version 0.0.21
-- button backgrounds
-
-version 0.0.20
-- sort addons properly
-
-version 0.0.19
-- channels per page setting
-
-version 0.0.18
-- addons will refresh without having to back out
-
-version 0.0.17
-- fix
-
-version 0.0.16
-- file/url options for all data
-- WARNING! probably needs a settings reset
-
-version 0.0.15
-- super favourites fix
-
-version 0.0.14
-- fix
-
-version 0.0.13
-- tweaks
-
-version 0.0.12
-- android fix
-
-version 0.0.11
-- removed osd until fixed
-
-version 0.0.10
-- bigger program description
-- only 14 channels
-
-version 0.0.9
-- tweaks
-
 version 0.0.8
-- hide background video
+- artwork database added
+- imdb/top250 ratings
+- fanart tv used for tv shows
+- osd shows charcterart/clearart
+- awards shown for movies/tvshows
 
 version 0.0.7
-- Super Favourites (use Spoyser's repo)
-- addon folders batch reload
+- fanart tv used for retrieving movie artwork
+- omdb used for retrieving rotten tomatoes ratings/consensus for movies
 
 version 0.0.6
-- fuzzy logo matching
+- change highlight colour for title to palegreen
 
 version 0.0.5
-- fuzzy channel matching
+- Bug fixes
 
 version 0.0.4
-- add addon folders to ini file
-- (back out of dialog/app to reload)
+- Episode/Season parsing for xmltv with mdb processing
+- skin fixes
 
-version 0.0.2
-- addon browser (click to load)
-
-version 0.0.1
+version 0.0.3
 - let's go
