--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,9 @@ USAGE NOTES:
 - reload all folders in settings
 - use Spoyser's repo for Super Favourites
 
+version 0.0.9
+- bug fixes
+
 version 0.0.8
 - artwork database added
 - imdb/top250 ratings
